# kore

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile.sqlite  LICENSE  README.md  cobertura.xml  docker-compose.yml  sonar-project.properties  test.sh
.github/actions-rs/: grcov.yml
.github/workflows/: build.yml  grcov.yml  sonarcloud.yml
identity/: Cargo.toml
identity/src/: lib.rs
identity/src/identifier/: digest_identifier.rs  error.rs  key_identifier.rs  mod.rs  signature_identifier.rs
identity/src/identifier/derive/: digest.rs  key.rs  mod.rs  signature.rs
identity/src/keys/: ed25519.rs  mod.rs  secp256k1.rs
kore-base/: Cargo.toml
kore-base/benches/: my_benchmark.rs
kore-base/src/: api.rs  config.rs  db.rs  error.rs  lib.rs  node.rs  system.rs
kore-base/src/approval/: approver.rs  mod.rs  request.rs  response.rs
kore-base/src/auth/: authorization.rs  authorizer.rs  mod.rs
kore-base/src/distribution/: distributor.rs  mod.rs
kore-base/src/evaluation/: evaluator.rs  mod.rs  request.rs  response.rs  schema.rs
kore-base/src/evaluation/compiler/: mod.rs
kore-base/src/evaluation/runner/: executor.rs  mod.rs  types.rs
kore-base/src/external_db/: mod.rs
kore-base/src/governance/: data.rs  event.rs  events.rs  init.rs  json_schema.rs  mod.rs  model.rs  schema.rs
kore-base/src/helpers/: encrypted_pass.rs  mod.rs
kore-base/src/helpers/db/: common.rs  mod.rs  sqlite.rs
kore-base/src/helpers/network/: intermediary.rs  mod.rs  service.rs
kore-base/src/helpers/sink/: mod.rs
kore-base/src/local_db/: mod.rs
kore-base/src/manual_distribution/: mod.rs
kore-base/src/model/: common.rs  event.rs  mod.rs  namespace.rs  network.rs  patch.rs  request.rs  signature.rs  subject.rs  wrapper.rs
kore-base/src/model/common/: contract.rs  mod.rs  node.rs  relation_ship.rs
kore-base/src/node/: mod.rs  nodekey.rs  register.rs  relationship.rs  transfer.rs
kore-base/src/query/: mod.rs
kore-base/src/request/: create.rs  handler.rs  manager.rs  mod.rs  reboot.rs  req.rs  state.rs  types.rs
kore-base/src/subject/: event.rs  mod.rs  sinkdata.rs  transfer.rs  validata.rs
kore-base/src/tracker/: mod.rs
kore-base/src/update/: mod.rs  updater.rs
kore-base/src/validation/: mod.rs  proof.rs  request.rs  response.rs  schema.rs  validator.rs
kore-base/tests/: gov.rs  mod.rs  node_builder.rs  prints.rs  subject.rs
kore-base/tests/common/: mod.rs
kore-base/tests/validation/: integration_tests.rs
kore-bridge/: Cargo.toml
kore-bridge/src/: config.rs  lib.rs  utils.rs
kore-bridge/src/model/: mod.rs  signature.rs
kore-bridge/src/prometheus/: mod.rs
kore-bridge/src/settings/: command.rs  mod.rs  params.rs
kore-client/: Cargo.toml
kore-client/src/: config.rs  error.rs  lib.rs  manager.rs  service.rs
kore-common/: Cargo.toml
kore-common/src/: error.rs  lib.rs  namespace.rs  network.rs  request.rs  signature.rs  wrapper.rs
kore-http/: .gitignore  Cargo.toml
kore-http/docker/: Dockerfile.rockdb  Dockerfile.rocksdb  Dockerfile.sqlite  build.sh
kore-http/src/: enviroment.rs  error.rs  logging.rs  main.rs  middleware.rs  server.rs  wrappers.rs
kore-http/src/doc/: mod.rs
kore-sink/kore-sink-client/: Cargo.toml
kore-sink/kore-sink-client/src/: lib.rs
kore-sink/kore-sink-server/: Cargo.toml  build.rs
kore-sink/kore-sink-server/src/: lib.rs  server.rs
kore-sink/protos/: sink.proto
kore-types/: Cargo.toml
kore-types/src/: error.rs  lib.rs  signature.rs  wrapper.rs
network/: Cargo.toml
network/src/: behaviour.rs  control_list.rs  error.rs  lib.rs  monitor.rs  node.rs  routing.rs  service.rs  transport.rs  utils.rs  worker.rs
network/src/helpers/: intermediary.rs  mod.rs  service.rs
protocols/tell/: Cargo.toml
protocols/tell/src/: cache.rs  handler.rs  lib.rs  protocol.rs
protocols/tell/src/codec/: binary.rs  borsh.rs  cbor.rs  json.rs  mod.rs
protocols/tell/tests/: failures.rs
