[workspace]
members = [
    "identity",
    "kore-base",
    "kore-bridge",
    "network",
    "protocols/tell",
]

resolver = "2"

[workspace.package]
version = "0.6.4"
edition = "2021"
authors = ["Kore Ledger, SL <info@kore-ledger.net>"]
description = "Kore Ledger base library"
readme = "README.md"
homepage = "https://www.kore-ledger.net"
repository = "https://github.com/kore-ledger/kore-base"
license = "AGPL-3.0-only"
keywords = ["traceability", "distributed-ledger", "kore", "sustainability"]
rust-version = "1.80.0"

[workspace.dependencies]
async-trait = "0.1.85"
async-std = { version = "1.12" }
bs58 = "0.5"
base64 = "0.22"
bincode = "1.3"
blake2 = "0.10"
blake3 = "1.5.5"
borsh = { version = "1.5.3", features = ["std", "derive"] }
ed25519-dalek = { version = "2", features = ["alloc", "pkcs8"] }
either = "1.10"
fnv = "1.0"
futures = "0.3.31"
futures-timer = "3.0"
generic-array = "1.1.1"
getrandom = "0.2"
hex = "0.4"
ip_network = "0.4"
k256 = { version = "0.13.4", features = ["ecdsa-core"] }
lazy_static = "1.5.0"
libp2p = { version = "0.54.1", default-features = false}
libp2p-swarm-test = { version = "0.4.0" }
linked_hash_set = "0.1.5"
lru = "0.12.5"
memsecurity = { version = "3.4.0", features = ["encryption"] }
metrics = "0.24.1"
once_cell = "1.20.2"
# Lib p2p version:
prometheus-client = "0.22.0"
rand = "0.8.5"
rmp-serde = "1.3"
serial_test = "3.2.0"
sha2 = "0.10"
sha3 = "0.10"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
smallvec = "1.11.1"
tempfile = "3.15.0"
time = "0.3.37"
thiserror = "2.0.10"
tokio = { version = "1.43.0" }
tokio-util = { version = "0.7.13" }
tracing ={ version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-test = "0.2"
actor = { path = "../rush-rs/actor" }
reqwest = { version = "0.12.12", features = ["json"] }
