[workspace]
members = [
    "identity",
    "kore-base",
    "kore-bridge",
    "network",
    "protocols/tell",
    "kore-http"
]

resolver = "2"

[workspace.package]
version = "0.7.0"
edition = "2024"
authors = ["Kore Ledger, SL <info@kore-ledger.net>"]
description = "Kore Ledger base library"
readme = "README.md"
homepage = "https://www.kore-ledger.net"
repository = "https://github.com/kore-ledger/kore-base"
license = "AGPL-3.0-only"
keywords = ["traceability", "distributed-ledger", "kore", "sustainability"]
rust-version = "1.85.0"

[workspace.dependencies]
async-trait = "0.1.88"
async-std = { version = "1.13.1" }
bs58 = "0.5"
base64 = "0.22"
bincode = { version = "2.0.1", features = ["serde"] }
blake2 = "0.10"
blake3 = "1.8.0"
borsh = { version = "1.5.7", features = ["std", "derive"] }
ed25519-dalek = { version = "2", features = ["alloc", "pkcs8"] }
either = "1.15.0"
fnv = "1.0"
futures = "0.3.31"
futures-timer = "3.0"
generic-array = "1.2.0"
getrandom = "0.3.2"
hex = "0.4"
ip_network = "0.4"
k256 = { version = "0.13.4", features = ["ecdsa-core"] }
lazy_static = "1.5.0"
libp2p = { version = "0.55.0", default-features = false}
libp2p-swarm-test = { version = "0.5.0" }
linked_hash_set = "0.1.5"
lru = "0.13.0"
memsecurity = { version = "3.4.0", features = ["encryption"] }
metrics = "0.24.1"
once_cell = "1.21.3"
# Lib p2p version:
prometheus-client = "0.22.3"
rand = "0.9.0"
rmp-serde = "1.3"
serial_test = "3.2.0"
sha2 = "0.10"
sha3 = "0.10"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
smallvec = "1.14.0"
tempfile = "3.19.1"
time = "0.3.41"
thiserror = "2.0.12"
tokio = { version = "1.44.1" }
tokio-util = { version = "0.7.14" }
tracing ={ version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
test-log = {version = "0.2.17", features = ["trace"] }
actor = { path = "../rush-rs/actor" }
reqwest = { version = "0.12.15", features = ["json"] }
config = { version = "0.15.8", features = ["json", "toml", "yaml"]}
