[package]
name = "kore-base"
version.workspace = true
edition.workspace = true

[dependencies]
actor = { workspace = true }
argon2 = "0.5"
async-trait = { workspace = true }
bincode = { workspace = true }
borsh = { workspace = true }
generic-array = {version = "1.0", features = ["zeroize"] }
identity = { path = "../identity"}
json-patch = { version = "3.0.1" }
jsonschema = { version = "0.22.3", default_features = false }
lazy_static = { workspace = true }
memsecurity = { version = "3.5", features = ["encryption"]}
rocksdb_db = { path = "../../rush-rs/databases/rocksdb_db", optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlite_db = { path = "../../rush-rs/databases/sqlite_db", optional = true }
store = { path = "../../rush-rs/store" }
thiserror = { workspace = true }
time = { workspace = true, features = ["std"] }
tokio = { workspace = true, features = ["rt", "macros", "sync", "time"] }
tracing = { workspace = true }
network = { path = "../network" }
rmp-serde = { workspace = true }
wasmtime = {version = "25.0.0"}
async-std = "=1.13.0"
tokio-rusqlite = {version = "0.6.0", optional = true}

[dev-dependencies]
tempfile = { workspace = true }
tracing-test = { workspace = true }
tracing-subscriber = { workspace = true }
tokio-util = { workspace = true }
prometheus-client = { workspace = true }

[features]
default = ["rocksdb", "sqlite-local"]
rocksdb = ["rocksdb_db"]
sqlite = ["sqlite_db"]
sqlite-local = ["tokio-rusqlite"]
