[package]
name = "kore-base"
version.workspace = true
edition.workspace = true

[dependencies]
actor = { workspace = true }
async-trait = { workspace = true }
bincode = { workspace = true }
borsh = { workspace = true }
generic-array = {version = "1.0", features = ["zeroize"] }
identity = { path = "../identity"}
json-patch = { version = "3.0.1" }
jsonschema = { version = "0.28.1", default_features = false }
lazy_static = { workspace = true }
memsecurity = { version = "3.5", features = ["encryption"]}
rocksdb_db = { path = "../../rush-rs/databases/rocksdb_db", optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlite_db = { path = "../../rush-rs/databases/sqlite_db", optional = true }
store = { path = "../../rush-rs/store" }
thiserror = { workspace = true }
time = { workspace = true, features = ["std"] }
tokio = { workspace = true, features = ["rt", "macros", "sync", "time"] }
tracing = { workspace = true }
network = { path = "../network" }
rmp-serde = { workspace = true }
wasmtime = {version = "28.0.0"}
async-std = "=1.13.0"
tokio-rusqlite = {version = "0.6.0", optional = true}
once_cell = { workspace = true }
base64 = { workspace = true }
prometheus-client = { workspace = true }
tokio-util = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tracing-test = { workspace = true }
tracing-subscriber = { workspace = true }
serial_test = { workspace = true }

[features]
default = ["rocksdb", "ext-sqlite"]
rocksdb = ["rocksdb_db"]
sqlite = ["sqlite_db"]
ext-sqlite = ["tokio-rusqlite"]
