[package]
name = "kore-base"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
rust-version.workspace = true

[dependencies]
actor = { workspace = true }
async-trait = { workspace = true }
bincode = { workspace = true }
borsh = { workspace = true }
generic-array = {version = "1.2.0", features = ["zeroize"] }
identity = { path = "../identity"}
json-patch = { version = "4.0.0" }
lazy_static = { workspace = true }
memsecurity = { version = "3.5.2", features = ["encryption"]}
rocksdb_db = { path = "../../rush-rs/databases/rocksdb_db", optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlite_db = { path = "../../rush-rs/databases/sqlite_db", optional = true }
store = { path = "../../rush-rs/store" }
thiserror = { workspace = true }
time = { workspace = true, features = ["std"] }
tokio = { workspace = true, features = ["rt", "macros", "sync", "time", "fs"] }
tracing = { workspace = true }
network = { path = "../network" }
rmp-serde = { workspace = true }
wasmtime = {version = "36.0.2"}
rusqlite = { version = "0.37.0", features = ["bundled"], optional = true}
once_cell = { workspace = true }
base64 = { workspace = true }
prometheus-client = { workspace = true }
tokio-util = { workspace = true }
reqwest = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
test-log = { workspace = true } 
tempfile = { workspace = true }
tracing-subscriber = { workspace = true }
criterion = { version = "0.7.0", features = ["async_tokio"]}
tokio = { workspace = true, features = ["full"] }
futures ={ version = "0.3.31"}
network = { path = "../network", features = ["test"]}

[features]
default = ["sqlite", "ext-sqlite"]
rocksdb = ["rocksdb_db"]
sqlite = ["sqlite_db"]
ext-sqlite = ["rusqlite"]
test = []