[package]
name = "kore-bridge"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
rust-version.workspace = true

[dependencies]
kore-base = { path = "../kore-base"}
network = { path = "../network" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
prometheus-client = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "sync", "time", "signal"] }
tokio-util = { workspace = true }
identity = { path = "../identity"}
hex-literal = "1.0.0"
pkcs8 = { version = "0.10.2", features = ["encryption"]}
borsh = { workspace = true }
config = { workspace = true }
clap = { version = "4.5.35", features = ["derive"] }
axum = { version = "0.8.1", optional = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
serial_test = { workspace = true }

[features]
default = ["prometheus"]
prometheus = ["axum"]

[lib]
bench = false