[package]
name = "tell"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true }
borsh = { workspace = true, optional = true }
cbor4ii = { version = "0.3", features = ["serde1", "use_std"], optional = true }
futures = { workspace = true }
futures-bounded = "0.2"
libp2p = { workspace = true, default_features = false, features = [
	"identify",
]}
lru = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true, features = ["derive"]}
serde_json = { workspace = true, optional = true }
smallvec = { workspace = true }
tracing = { workspace = true }
void = "1.0.2"

[dev-dependencies]
anyhow = "1.0.79"
async-std = { workspace = true, features = ["attributes"] }
futures_ringbuf = "0.4.0"
libp2p-swarm-test = { workspace = true }
rand = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[features]
default = ["binary", "borsh", "json", "cbor"]
json = ["serde_json"]
binary = []
cbor = ["cbor4ii"]

[lib]
bench = false